--- a/app/src/main/res/layout/fragment_task01.xml
+++ b/app/src/main/res/layout/fragment_task01.xml
@@ -5,9 +5,50 @@
     android:layout_height="match_parent"
     tools:context=".ui.task01.Task01Fragment">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textViewId1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TEXT"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/editTextId2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="text" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/buttonId3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Button" />
+
+            <CheckBox
+                android:id="@+id/checkBoxId5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="SNACKBAR/Toast"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
